[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-intel-agent"
version = "0.1.0"
description = "AI-powered threat intelligence agent using LLMs to process security feeds"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Abel Rodriguez" }
]
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]